--- a/index.html
+++ b/index.html
@@ -3,11 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- daisyui and tailwind css -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@3.5.1/dist/full.css" rel="stylesheet" type="text/css" />
     <title>Shopping Cart </title>
 
 </head>
-<body>
-    
+<body class="container mx-auto mt-14 ">
+  <main class="flex justify-around">
+   <div id="cart-div" class=" w-1/2 grid grid-cols-2 gap-5">
+    <div class="card w-72 bg-base-100 shadow-xl">
+      <figure><img src="./images/shoe1.jpg" alt="product" /></figure>
+      <div class="card-body">
+        <h2 class="card-title mx-auto">Casual Shoes</h2>
+        <p class="text-center text-lg font-bold">Price 700$</p
+        <div class="card-actions justify-end">
+          <button class="btn btn-primary">Buy Now</button>
+        </div>
+      </div>
+    <div class="card w-72 bg-base-100 shadow-xl">
+      <figure><img src="./images/shoe2.jpg" alt="product" /></figure>
+      <div class="card-body">
+        <h2 class="card-title mx-auto">Casual Shoes</h2>
+        <p class="text-center text-lg font-bold">Price 700$</p
+        <div class="card-actions justify-end">
+          <button class="btn btn-primary">Buy Now</button>
+        </div>
+      </div>
+    <div class="card w-72 bg-base-100 shadow-xl">
+      <figure><img src="./images/shoe3.jpg" alt="product" /></figure>
+      <div class="card-body">
+        <h2 class="card-title mx-auto">Casual Shoes</h2>
+        <p class="text-center text-lg font-bold">Price 700$</p
+        <div class="card-actions justify-end">
+          <button class="btn btn-primary">Buy Now</button>
+        </div>
+      </div>
+    <div class="card w-72 bg-base-100 shadow-xl">
+      <figure><img src="./images/shoe4.jpg" alt="product" /></figure>
+      <div class="card-body">
+        <h2 class="card-title mx-auto">Casual Shoes</h2>
+        <p class="text-center text-lg font-bold">Price 700$</p
+        <div class="card-actions justify-end">
+          <button class="btn btn-primary">Buy Now</button>
+        </div>
+      </div>
+    </div>
+    <div id="calculation" class="mx-autobg-slate-700 shadow-xl rounded-lg text-center w-1/3">
+        <h1 class="text-5xl text-red-800 italic ">Price Memo</h1>
+    </div>
+  </main>   
+   
+
+
+
+
+    <script src="index.js"></script>
 </body>
 </html>
