some cart added

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <title>Shopping Cart </title>
 
 </head>
-<body class="container mx-auto mt-14 ">
+<body class="container mx-auto mt-14 mb-10">
   <main class="flex justify-around">
-   <div id="cart-div" class=" w-1/2 grid grid-cols-2 gap-5">
+   <div id="cart-div" class="  grid grid-cols-3 gap-5">
     <div class="card w-72 bg-base-100 shadow-xl">
       <figure><img src="./images/shoe1.jpg" alt="product" /></figure>
       <div class="card-body">
-        <h2 class="card-title mx-auto">Casual Shoes</h2>
-        <p class="text-center text-lg font-bold">Price 700$</p
+        <h2 class="card-title mx-auto">Smart Shoes</h2>
+        <p class="text-center text-lg font-bold">Price 900$</p
         <div class="card-actions justify-end">
           <button class="btn btn-primary">Buy Now</button>
         </div>
@@ -33,8 +33,8 @@
     <div class="card w-72 bg-base-100 shadow-xl">
       <figure><img src="./images/shoe3.jpg" alt="product" /></figure>
       <div class="card-body">
-        <h2 class="card-title mx-auto">Casual Shoes</h2>
-        <p class="text-center text-lg font-bold">Price 700$</p
+        <h2 class="card-title mx-auto">Amazing Shoes</h2>
+        <p class="text-center text-lg font-bold">Price 600$</p
         <div class="card-actions justify-end">
           <button class="btn btn-primary">Buy Now</button>
         </div>
@@ -42,15 +42,33 @@
     <div class="card w-72 bg-base-100 shadow-xl">
       <figure><img src="./images/shoe4.jpg" alt="product" /></figure>
       <div class="card-body">
-        <h2 class="card-title mx-auto">Casual Shoes</h2>
-        <p class="text-center text-lg font-bold">Price 700$</p
+        <h2 class="card-title mx-auto">Red Shoes</h2>
+        <p class="text-center text-lg font-bold">Price 800$</p
+        <div class="card-actions justify-end">
+          <button class="btn btn-primary">Buy Now</button>
+        </div>
+      </div>
+    <div class="card w-72 bg-base-100 shadow-xl">
+      <figure><img src="./images/shoe5.jpg" alt="product" /></figure>
+      <div class="card-body">
+        <h2 class="card-title mx-auto">white Shoes</h2>
+        <p class="text-center text-lg font-bold">Price 800$</p
+        <div class="card-actions justify-end">
+          <button class="btn btn-primary">Buy Now</button>
+        </div>
+      </div>
+    <div class="card w-72 bg-base-100 shadow-xl">
+      <figure><img src="./images/shoe6.jpg" alt="product" /></figure>
+      <div class="card-body">
+        <h2 class="card-title mx-auto">Incredible Shoes</h2>
+        <p class="text-center text-lg font-bold">Price 1000$</p
         <div class="card-actions justify-end">
           <button class="btn btn-primary">Buy Now</button>
         </div>
       </div>
     </div>
-    <div id="calculation" class="mx-autobg-slate-700 shadow-xl rounded-lg text-center w-1/3">
-        <h1 class="text-5xl text-red-800 italic ">Price Memo</h1>
+    <div id="calculation" class="  bg-blue-100 shadow-xl rounded-lg text-center ">
+        <h1 class="text-3xl text-red-800 italic mt-5 px-20">Cart Menu</h1>
     </div>
   </main>   
    
