--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h2 class="card-title mx-auto">Smart Shoes</h2>
         <p class="text-center text-lg font-bold">Price 900$</p
         <div class="card-actions justify-end">
-          <button class="btn btn-primary">Buy Now</button>
+          <button onclick="shoppingCart(this)" class="btn btn-primary">Buy Now</button>
         </div>
       </div>
     <div class="card w-72 bg-base-100 shadow-xl">
@@ -27,7 +27,7 @@
         <h2 class="card-title mx-auto">Casual Shoes</h2>
         <p class="text-center text-lg font-bold">Price 700$</p
         <div class="card-actions justify-end">
-          <button class="btn btn-primary">Buy Now</button>
+          <button onclick="shoppingCart(this)" class="btn btn-primary">Buy Now</button>
         </div>
       </div>
     <div class="card w-72 bg-base-100 shadow-xl">
@@ -36,7 +36,7 @@
         <h2 class="card-title mx-auto">Amazing Shoes</h2>
         <p class="text-center text-lg font-bold">Price 600$</p
         <div class="card-actions justify-end">
-          <button class="btn btn-primary">Buy Now</button>
+          <button onclick="shoppingCart(this)" class="btn btn-primary">Buy Now</button>
         </div>
       </div>
     <div class="card w-72 bg-base-100 shadow-xl">
@@ -45,7 +45,7 @@
         <h2 class="card-title mx-auto">Red Shoes</h2>
         <p class="text-center text-lg font-bold">Price 800$</p
         <div class="card-actions justify-end">
-          <button class="btn btn-primary">Buy Now</button>
+          <button onclick="shoppingCart(this)" class="btn btn-primary">Buy Now</button>
         </div>
       </div>
     <div class="card w-72 bg-base-100 shadow-xl">
@@ -54,7 +54,7 @@
         <h2 class="card-title mx-auto">white Shoes</h2>
         <p class="text-center text-lg font-bold">Price 800$</p
         <div class="card-actions justify-end">
-          <button class="btn btn-primary">Buy Now</button>
+          <button onclick="shoppingCart(this)" class="btn btn-primary">Buy Now</button>
         </div>
       </div>
     <div class="card w-72 bg-base-100 shadow-xl">
@@ -63,12 +63,14 @@
         <h2 class="card-title mx-auto">Incredible Shoes</h2>
         <p class="text-center text-lg font-bold">Price 1000$</p
         <div class="card-actions justify-end">
-          <button class="btn btn-primary">Buy Now</button>
+          <button onclick="shoppingCart(this)" class="btn btn-primary">Buy Now</button>
         </div>
       </div>
     </div>
-    <div id="calculation" class="  bg-blue-100 shadow-xl rounded-lg text-center ">
-        <h1 class="text-3xl text-red-800 italic mt-5 px-20">Cart Menu</h1>
+    <div id="calculation" class=" text-red-800 italic bg-blue-100 shadow-xl rounded-lg text-center ">
+        <h1 class="text-3xl  mt-5 px-20">Cart Menu</h1>
+        <p class="text-2xl ">Items</p>
+        
     </div>
   </main>   
    
