shopping cart completed

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <figure><img src="./images/shoe1.jpg" alt="product" /></figure>
       <div class="card-body">
         <h2 class="card-title mx-auto">Smart Shoes</h2>
-        <p class="text-center text-lg font-bold">Price 900$</p
+        <p class="text-center text-lg font-bold">Price 900 $</p
         <div class="card-actions justify-end">
           <button onclick="shoppingCart(this)" class="btn btn-primary">Buy Now</button>
         </div>
@@ -25,7 +25,7 @@
       <figure><img src="./images/shoe2.jpg" alt="product" /></figure>
       <div class="card-body">
         <h2 class="card-title mx-auto">Casual Shoes</h2>
-        <p class="text-center text-lg font-bold">Price 700$</p
+        <p class="text-center text-lg font-bold">Price 700 $</p
         <div class="card-actions justify-end">
           <button onclick="shoppingCart(this)" class="btn btn-primary">Buy Now</button>
         </div>
@@ -34,7 +34,7 @@
       <figure><img src="./images/shoe3.jpg" alt="product" /></figure>
       <div class="card-body">
         <h2 class="card-title mx-auto">Amazing Shoes</h2>
-        <p class="text-center text-lg font-bold">Price 600$</p
+        <p class="text-center text-lg font-bold">Price 600 $</p
         <div class="card-actions justify-end">
           <button onclick="shoppingCart(this)" class="btn btn-primary">Buy Now</button>
         </div>
@@ -43,7 +43,7 @@
       <figure><img src="./images/shoe4.jpg" alt="product" /></figure>
       <div class="card-body">
         <h2 class="card-title mx-auto">Red Shoes</h2>
-        <p class="text-center text-lg font-bold">Price 800$</p
+        <p class="text-center text-lg font-bold">Price 800 $</p
         <div class="card-actions justify-end">
           <button onclick="shoppingCart(this)" class="btn btn-primary">Buy Now</button>
         </div>
@@ -52,7 +52,7 @@
       <figure><img src="./images/shoe5.jpg" alt="product" /></figure>
       <div class="card-body">
         <h2 class="card-title mx-auto">white Shoes</h2>
-        <p class="text-center text-lg font-bold">Price 800$</p
+        <p class="text-center text-lg font-bold">Price 800 $</p
         <div class="card-actions justify-end">
           <button onclick="shoppingCart(this)" class="btn btn-primary">Buy Now</button>
         </div>
@@ -61,16 +61,16 @@
       <figure><img src="./images/shoe6.jpg" alt="product" /></figure>
       <div class="card-body">
         <h2 class="card-title mx-auto">Incredible Shoes</h2>
-        <p class="text-center text-lg font-bold">Price 1000$</p
+        <p class="text-center text-lg font-bold">Price 1000 $</p
         <div class="card-actions justify-end">
           <button onclick="shoppingCart(this)" class="btn btn-primary">Buy Now</button>
         </div>
       </div>
     </div>
-    <div id="calculation" class=" text-red-800 italic bg-blue-100 shadow-xl rounded-lg text-center ">
-        <h1 class="text-3xl  mt-5 px-20">Cart Menu</h1>
-        <p class="text-2xl ">Items</p>
-        
+    <div id="calculation" class=" text-red-800 text-2xl italic bg-blue-100 shadow-xl rounded-lg text-center">
+        <h1 class="  mt-5 px-20">Cart Menu</h1>
+        <p class=" ">Items</p>
+        <p >Total Price : <span></span> $</p>
     </div>
   </main>   
    
